<resources>
    <string name="app_name">Art on Mobile</string>

    <!-- Error messages -->
    <string name="msg_error">Connection error!</string>
    <string name="msg_error_no_api_key">Please obtain an api key first from the Rijksmuseum site!</string>
    <string name="msg_no_fav_items">You don\'t have any favorite art object, yet.</string>

    <!-- Informative messages -->
    <string name="msg_removed_from_fav">The art object was removed from your favorite list.</string>
    <string name="msg_added_to_fav">The art object is now one of your favorites.</string>

    <!-- Descriptions -->
    <string name="desc_art_object">Art object from Rijksmmuseum</string>
    <string name="desc_list_item">Art object from Rijksmmuseum</string>
    <string name="desc_item">Art object from Rijksmmuseum</string>
    <string name="desc_of_arrow_right_white">Arrow right white</string>

    <!-- Sort by -->
    <string name="sort_by">Sorting…</string>

    <!-- Navigation Drawer -->
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Includes art objects from Rijksmuseum</string>
    <string name="nav_header_subtitle2">Made by Delapanta © 2018</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_all_works_of_arts">All Works of Arts</string>
    <string name="nav_all_paintings">All Paintings</string>
    <string name="nav_styles">Rijksstudio Styles</string>
    <string name="nav_favorites">My favorite art objects</string>
    <string name="nav_sort_by_date">by date (oldest first)</string>
    <string name="nav_sort_by_artist">by artist (a-z)</string>
    <string name="nav_sort_by_type">by type</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_fav">My favorites</string>
    <string name="label_maker">by</string>
    <string name="label_description">Description</string>
    <string name="action_share">Share</string>
    <string name="appwidget_text">Art Object Title</string>
    <string name="add_widget">Add widget</string>
    <string name="desc_appwidget">Favorite art object</string>
    <string name="desc_fab_mail">Floating Action Button with action e-mail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the sort by preference -->
    <string name="pref_sort_by_label">Sort by…</string>

    <string name="pref_sort_by_date_label">Date (oldest first)</string>
    <string name="pref_sort_by_artist_label">Artist (a-z)</string>
    <string name="pref_sort_by_type_label">Type</string>

    <!-- Key name for sort by preference in SharedPreferences -->
    <string name="pref_sort_by_key" translatable="false">sort_by</string>

    <string name="pref_sort_by_date" translatable="false">by_date</string>
    <string name="pref_sort_by_artist" translatable="false">by_artist</string>
    <string name="pref_sort_by_type" translatable="false">by_type</string>

    <!-- Value in SharedPreferences for default option -->
    <string name="pref_sort_by_default" translatable="false">by_date</string>

    <string name="nav_sort_by_label">Sort by...</string>
    <string name="desc_nav_drawer_sort_by">Menu options for sorting</string>
    <string name="desc_widget_go_to_prev">Arrow with action go to previous image</string>
    <string name="desc_widget_go_to_next">Arrow with action go to next image</string>

    <string name="fab_email_text">Why don\'t you suggest this app to your friends? Send them an e-mail now!</string>
    <string name="email_title">Maybe you should check out this app! It\'s awesome!</string>
    <string name="widget_msg_no_fav">There are not any art objects in your favorites. Why don\'t you add some?</string>
</resources>