<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_first"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allworksofarts"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_all_works_of_arts" />
        <item
            android:id="@+id/nav_allpaintings"
            android:icon="@drawable/ic_palette"
            android:title="@string/nav_all_paintings" />
    </group>

    <group
        android:id="@+id/menu_second"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:title="@string/nav_favorites" />
    </group>

    <group
        android:id="@+id/menu_third"
        android:checkableBehavior="single">
        <item
            android:contentDescription="@string/desc_nav_drawer_sort_by"
            android:title="@string/nav_sort_by_label">
        <menu>
            <item
                android:id="@+id/nav_sort_by_date"
                android:icon="@drawable/ic_date_range"
                android:title="@string/nav_sort_by_date" />
            <item
                android:id="@+id/nav_sort_by_artist"
                android:icon="@drawable/ic_portrait"
                android:title="@string/nav_sort_by_artist" />

        </menu>
    </item>
    </group>

</menu>
